ajout d'un menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
 <body>
 
-    Le vide
+    <h1>Mon Super Titre</h1>
+
+    <nav>
+        <ol>
+            <li><a href="#">Je sais pas quoi mettre</a></li>
+            <li><a href="#">la non plus</a></li>
+            <li><a href="#">la non plus</a></li>
+        </ol>
+    </nav>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
