--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
 <body>
 
-    Le vide
-
+    <img src="./img/rose.jpg" alt="image de rose">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
